OPTIONAL app-layer EKS/ssl-setup eks/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
  name: frontend-ingress
  namespace: demo-app
spec:
  rules:
    - host: demo-app-gabrieletupini.ga
      http:
        paths:
        - path: /
          backend:
            serviceName: frontend
            servicePort: 80
  tls:
  - hosts: 
    - demo-app-gabrieletupini.ga
    secretName: frontend-secret
